# Rubber-Froggy

./: Makefile  README.md  main.spec  pyproject.toml
rubberfroggy/: __init__.py  animate.py  create.py  main.py  pet.py  util.py
rubberfroggy/editing/: falling.piskel  grabbed.piskel  grabbed_to_falling.piskel  heart.piskel  idle.piskel  idle_to_grabbed.piskel  idle_to_question.piskel  idle_to_sleep.piskel  landing.piskel  palette.gpl  question.piskel  sleep.piskel
